--- a/pages/index.html
+++ b/pages/index.html
@@ -1,2 +1,2 @@
-<a href="./../">Privacy and Policy</a>
-<a href="./../">Terms & Conditions</a>
+<a href="./privacy-policy.html">Privacy and Policy</a><br>]
+<a href="./terms-conditions.html">Terms & Conditions</a>
